--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>CoronaBot</title>
+  <title>BuddyBot</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -16,7 +16,7 @@
   <section class="msger">
     <header class="msger-header">
       <div class="msger-header-title">
-        <i class="fas fa-bug"></i> Coronavirus Chatbot <i class="fas fa-bug"></i>
+        BuddyBot
       </div>
     </header>
 
@@ -26,12 +26,11 @@
 
         <div class="msg-bubble">
           <div class="msg-info">
-            <div class="msg-info-name">CoronaBot</div>
-            <div class="msg-info-time">12:45</div>
+            <div class="msg-info-name">BuddyBot</div>
           </div>
 
           <div class="msg-text">
-            Hi, welcome to CoronaBot! Go ahead and send me a message. 😄
+            Hi there, 😄.
           </div>
         </div>
       </div>
@@ -55,7 +54,7 @@
     // Icons made by Freepik from www.flaticon.com
     const BOT_IMG = "https://image.flaticon.com/icons/svg/327/327779.svg";
     const PERSON_IMG = "https://image.flaticon.com/icons/svg/145/145867.svg";
-    const BOT_NAME = "CoronaBot";
+    const BOT_NAME = "BuddyBot";
     const PERSON_NAME = "You";
 
     msgerForm.addEventListener("submit", event => {
